<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wash_me"
    android:padding="12dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/sort_by"
        app:layout_constraintBottom_toBottomOf="@id/rg_sort"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rg_sort" />

    <RadioGroup
        android:id="@+id/rg_sort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/btn_sort"
        app:layout_constraintStart_toEndOf="@id/text_sort"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/rb_color_selector" />

        <RadioButton
            android:id="@+id/rb_hits"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/hits"
            android:textColor="@color/rb_color_selector" />

        <RadioButton
            android:id="@+id/rb_favs"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/favs"
            android:textColor="@color/rb_color_selector" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ass"
        app:layout_constraintBottom_toBottomOf="@id/rg_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/rg_sort" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_books"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_sort"
        tools:listitem="@layout/item_book" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:contentDescription="@string/logout"
        android:src="@drawable/exit"
        app:fabCustomSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>