<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="32dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/sign_up"
        android:textColor="@color/theme_watermelon"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="48dp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/enter_username"
        android:textColor="@color/rhino"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        app:lineHeight="24dp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_mail"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_username"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_mail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/enter_password"
        android:textColor="@color/rhino"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_mail"
        app:lineHeight="24dp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_password"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_pass" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_select_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/select_country"
        android:textColor="@color/rhino"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:lineHeight="24dp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_country"
        style="@style/SpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:spinnerMode="dropdown"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_select_country"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <LinearLayout
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/watermelon_rounded_bg"
        android:gravity="center_horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_country">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/continue_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:lineHeight="24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/continue_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_chevron_right" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/already_has_account_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />


</androidx.constraintlayout.widget.ConstraintLayout>